<resources>
    <string name="app_name">AuctionApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_auctions">All Auctions</string>
    <string name="placed_bids">Placed Bids</string>
    <string name="won_items">Won Items</string>
    <string name="Auction_placed">Auction Placed</string>
    <string name="cash">Cash</string>

    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="choose_password">Choose Password</string>
    <string name="repeat">Repeat Password</string>
    <string name="sigup">SignUp</string>
    <string name="cancel">Cancel</string>
    <string name="AutoFillHint" />
    <string name="logout">logout</string>
    <string name="default_notification_channel_id">Auction_App_FMC_Channel_ID</string>
    <string name="add_cash">Please enter the amout to be added</string>
    <string name="dollarSymbol">$</string>
    <string name="amount">0.00</string>
    <string name="add">Add</string>
    <string name="Enter_amount">Enter Amount</string>
    <string name="item_name">Item Name</string>
    <string name="auction_Start_date">Auction Start Date</string>
    <string name="start_bid_amount">Start Bid Amount</string>
<!--    <string name="minimum_final_bid">Minimum Final Bid</string>-->
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_start_bid">Start Bid Amount</string>
    <string name="post_item">Post Item</string>
    <string name="post_new_item">Post New Item</string>
    <string name="start_bid">Start Bid</string>
    <string name="current_highest_bid">Current Highest Bid</string>
    <string name="enter_bid_amount">Enter Bid Amount</string>
    <string name="add_amount">Enter Amount to Bid</string>
    <string name="current_highest_bidder">Highest Bidder</string>
    <string name="owner">Owner</string>
    <string name="created">Created</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="notification_channel">Auction_App_Notification_Channel</string>
    <string name="notification_channel_id">Auction_App_FMC_Channel_ID</string>
    <string name="ok">OK</string>
    <string name="channel_name">Auction_app_channel_name</string>
    <string name="channel_description">Notification_from_Auction_App</string>
    <string name="auction_end_date">Auction Completed Date</string>
    <string name="won_bid_amount">Won Bid Amount</string>
    <string name="balance_amount">Balance Amount</string>
    <string name="hold_amount">Hold Amount</string>
    <string name="minimum_final_bid">Minimum Final Bid</string>
</resources>