<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuctionPlacedFrag">

    <Button
        android:id="@+id/allAuctionsPostNewItemButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/post_new_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/AuctionPlacedRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/divider6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <View
        android:id="@+id/divider5"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        android:background="#ED8911"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/allAuctionsPostNewItemButton"
        app:layout_constraintEnd_toEndOf="@+id/divider5"
        app:layout_constraintStart_toStartOf="@+id/divider5" />


    <View
        android:id="@+id/divider6"
        android:layout_width="79dp"
        android:layout_height="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="5dp"
        android:background="#C53CEE"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/divider7"
        app:layout_constraintStart_toEndOf="@+id/divider5"
        app:layout_constraintTop_toTopOf="@+id/divider5" />


    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_progress"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/allAuctionsPostNewItemButton"
        app:layout_constraintEnd_toEndOf="@+id/divider6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/divider6" />

    <View
        android:id="@+id/divider7"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        android:background="#0F4FEC"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/allAuctionsPostNewItemButton"
        app:layout_constraintEnd_toEndOf="@+id/divider7"
        app:layout_constraintStart_toStartOf="@+id/divider7" />

</androidx.constraintlayout.widget.ConstraintLayout>